fixes scrollbars, enforces better min window width and height

--- a/src/renderer/assets/scss/_globals.scss
+++ b/src/renderer/assets/scss/_globals.scss
@@ -16,6 +16,10 @@ html, body {
   line-height: 1;
 }
 
+::-webkit-scrollbar {
+  width: 3px;
+}
+
 ::-webkit-scrollbar-thumb:vertical {
   background: $purple;
 }
